--- a/index.html
+++ b/index.html
@@ -1,53 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    
-  </head>
-  <body>
-    <section>
-      <div class="menu">
-      <nav class=" menu navbar navbar-expand-lg" id="menu" >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Eric Santos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
+  <title>Musicas</title>
+</head>
+<body>
+  <!--Navbar-->
+  <div id="navbar">
+  <navbar id="navbar-container">
+    <img src="img/logo.png" class="logo" alt="">
+    <ul class="navbar-items">
+      <li class="navbar-item">Premium</li>
+      <li class="navbar-item">Ajuda</li>
+      <li class="navbar-item">Baixar</li>
+      <li class="navbar-item">Inscrever-se</li>
+      <li class="navbar-item">Entrar</li>
+    </ul>
+  </navbar>
+</div>
+  <!--Imagem-->
+  <div id="showcase">
+    <div class="showcase-container">
+      <h2>Musica para todos</h2>
+      <p>Milhoões de musicas a sua escolha </p>
+      <button class="primary">Obtenha o Spotify</button>
     </div>
-    </section>
-
-    <section>
-      <div>
-        <div class="row">
-          <div class="col-sm-12 presentation">col-sm-8</div>
-          <div class="col-sm-6 ">col-sm-4</div>
-        </div>
-
-      </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+  </div>
+</body>
 </html>
