--- a/index.html
+++ b/index.html
@@ -29,8 +29,63 @@
     <div class="showcase-container">
       <h2>Musica para todos</h2>
       <p>Milhoões de musicas a sua escolha </p>
-      <button class="primary">Obtenha o Spotify</button>
+      <button class="btn-primary">Obtenha o Spotify</button>
     </div>
   </div>
+
+  <div id="footer">
+    <div class="footer-contents">
+      <img src="/img/logo.png" alt="" class="logo">
+      <ul class="footer-menu">
+        <li class="footer-menu-item">Sobre</li>
+        <li class="footer-menu-item">Empregos</li>
+        <li class="footer-menu-item">For the record</li>
+      </ul>
+
+      <ul class="footer-menu">
+        <li class="footer-menu-item">Para artistas</li>
+        <li class="footer-menu-item">Desenvolvedores</li>
+        <li class="footer-menu-item">Marcas</li>
+        <li class="footer-menu-item">Investidores</li>
+        <li class="footer-menu-item">Fornecedores</li>
+      </ul>
+
+      <ul class="footer-menu">
+        <li class="footer-menu-item">Ajuda</li>
+        <li class="footer-menu-item">Player Web</li>
+        <li class="footer-menu-item">Aplicativo Móvel gratis</li>
+      </ul>
+      <div class="socials">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook-f"></i>
+      </div>
+
+    </div>
+
+
+    <div class="footer-info">
+      <ul class="footer-info-itens">
+        <li class="footer-info-item">Legal</li>
+        <li class="footer-info-item">Centro de Privacidade</li>
+        <li class="footer-info-item">Politica de Privacidade</li>
+        <li class="footer-info-item">Cookies</li>
+        <li class="footer-info-item">Sobre anuncios</li>
+          
+        </li>
+      </ul>
+  
+      <div class="rights">
+        <div class="country">
+          <p>Brasil</p>
+          <img src="/img/brazil.png" class="flag">
+          <p>&copy; 2022 Spotify</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+  <script src="https://kit.fontawesome.com/a997fab96e.js" crossorigin="anonymous"></script>
 </body>
 </html>
