--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div id="footer">
     <div class="footer-contents">
-      <img src="/img/logo.png" alt="" class="logo">
+      <img src="img/logo.png" alt="" class="logo">
       <ul class="footer-menu">
         <li class="footer-menu-item">Sobre</li>
         <li class="footer-menu-item">Empregos</li>
@@ -78,7 +78,7 @@
       <div class="rights">
         <div class="country">
           <p>Brasil</p>
-          <img src="/img/brazil.png" class="flag">
+          <img src="img/brazil.png" class="flag">
           <p>&copy; 2022 Spotify</p>
         </div>
       </div>
