--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="showcase">
     <div class="showcase-container">
       <h2>Musica para todos</h2>
-      <p>Milhoões de musicas a sua escolha </p>
+      <p>Milhões de musicas a seu alcance. </p>
       <button class="btn-primary">Obtenha o Spotify</button>
     </div>
   </div>
